css/style.css
html {
  min-width: 1040px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

body {
  margin: 1em 0;
}

svg {
  font: 10px "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.axis path, .axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.units {
  color: #777;
}

.toolbar { 
  padding: 0 0 0 80px;
  font: 14px sans-serif;
}

.widget {
  float: left;
  margin: 0 30px 10px 0;
}
.widget-label {
  margin-right: 1em;
  line-height: 1.5em;
}

#snps-num {
  text-align: right;
}

.range {
  vertical-align: bottom;
}
.rangeslider--horizontal {
  display: inline-block;
  width: 100px;
}
.rangeslider__fill {
  background: #1995dc;
}

#cluster-legend {
  display: none;
  line-height: 24px;
}

#cluster-list {
  margin-left: 5px;
  position: relative;
  top: -1px;
}

#cluster-list span {
  color: white;
  display: inline-block;
  font-size: 12px;
  min-width: 20px;
  height: 20px;
  line-height: 20px;
  margin-right: 3px;
  text-align: center;
  -webkit-print-color-adjust: exact;
}

#histo-title {
  position: absolute;
  left: 690px;
  width: 380px;
  text-align: center;
}

.background {
  fill: #eee;
}

.clear {
  clear: both;
}

.toggle-btn {
  float: left;
  display: inline-block;
  color: #536570;
  border: 1px solid #d4dbe0;
  padding: 0.7em 1em;
  cursor: pointer;
  border-right-width: 0;
}

.toggle-btn-left { border-radius: 8px 0 0 8px; }
.toggle-btn-right { border-radius: 0 8px 8px 0; border-right-width: 1px; }

.toggle-btn.mini {
  margin-top: -0.3em;
  font-size: 80%;
  padding: 0.4em 1em;
}

.toggle-btn:hover {
  border-color: #b0bdc6;
  text-decoration: none;
}
.toggle-btn:hover + .toggle-btn { border-left-color: #b0bdc6; }

.toggle-btn.active {
  background-color: #e6e6e6;
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.toggle-btn.active:hover {
  color: #536570;
  border-color: #d4dbe0;
}
.toggle-btn.active:hover + .toggle-btn { border-left-color: #d4dbe0; }

#main-viz {
  position: absolute;
  z-index: 1;
}

line {
  stroke: #fff;
}

text.label {
  fill: #ccc;
}

text.axis-label {
  font-weight: bold;
}

.active text {
  fill: black;
  font-weight: bold;
}

#controls circle {
  stroke: #ccc;
  fill: white;
  stroke-width: 1.5px;
}

#controls circle.selected {
  stroke: black;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

#controls .extent {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
  stroke-width: 1.5px;
}

.handle {
  fill: rgba(0, 0, 0, 0.7);
}

.cell {
  stroke-width: 2px;
}
.cell.clickable {
  cursor: pointer;
}
.cell.active.clickable {
  stroke: rgba(255, 255, 255, 1);
}
.cell.active.clickable.same-pt {
  stroke-width: 3px;
}

.bg {
  fill: none;
}
.selected {
  fill: rgba(0, 0, 0, 0.07);
}

.selected-cell {
  stroke: #000;
  stroke-width: 4px;
  fill: none;
}

.histo-bg {
  fill: white;
  opacity: 0;
  cursor: crosshair;
}

.histo-cutoff {
  stroke: red;
  stroke-width: 2;
  stroke-dasharray: 4;
}

.bar {
  fill: rgba(0, 0, 0, 0.3);
}
.bar .same-pt {
  fill: rgba(0, 0, 0, 1);
}

.dendro .link, .dendro .scale {
  fill: none;
  stroke: #777;
}

.dendro .leaf {
  stroke: #ccc;
  stroke-dasharray: 2;
}

#epi-heatmap {
  background-color: #2e2e2e;
  position: absolute;
  z-index: 0;
  width: 100%;
  box-shadow: inset 0 6px 10px rgba(0, 0, 0, 0.7);
  box-sizing: content-box;
}
#epi-heatmap > .cont {
  background: no-repeat;
  background-position: 0 0;
  background-size: contain;
}

#epi-heatmap .heatmap-canvas {
  opacity: 0.5;
}

#epi-controls {
  position: absolute;
  z-index: 2;
  margin-top: 40px;
  color: #777;
}

#epi-controls .rangeslider {
  opacity: 0.7;
}

#epi-controls .chk-label, #epi-controls .chk {
  cursor: pointer;
}

#epi-controls .chk {
  font-size: 160%;
  margin-right: 0.2em;
}

#epi-controls .color-scale {
  display: inline-block;
  width: 50px;
  height: 20px;
  margin-bottom: -6px;
  position: relative;
  background: -moz-linear-gradient(left, rgba(0,0,255,0) 0%, rgba(0,0,255,1) 50%, rgba(255,0,0,1) 80%, rgba(255,255,255,1) 95%, rgba(255,255,255,1) 100%);
  background: -webkit-linear-gradient(left, rgba(0,0,255,0) 0%,rgba(0,0,255,1) 50%,rgba(255,0,0,1) 80%,rgba(255,255,255,1) 95%,rgba(255,255,255,1) 100%);
  background: linear-gradient(to right, rgba(0,0,255,0) 0%,rgba(0,0,255,1) 50%,rgba(255,0,0,1) 80%,rgba(255,255,255,1) 95%,rgba(255,255,255,1) 100%);
}

#epi-controls .color-scale span {
  position: absolute;
  top: 22px;
  font-size: 10px;
}
#epi-controls .color-scale .min { left: 0; }
#epi-controls .color-scale .max { right: -1em; width: 2em; text-align: center; }

.network-links line {
  stroke: rgba(255, 100, 100, 0.5);
}

.network-nodes circle {
  stroke: white;
  stroke-width: 1.5px;
}

.network-nodes .ungrouped {
  fill: #222;
}

/**** select2 customization ****/

#filter-cont select.select2 {  /* helps prevent flash of unstyled content */
  visibility: hidden;
  height: 36px;
  display: inline-block;
  vertical-align: middle;
}
#filter-cont .select2-container {
  width: 500px !important;
  line-height: 1.5em;
}
#filter-cont input { 
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 3px 0;
  line-height: normal;
}
.select2-results {
  font-size: 14px;
}

.select2-container--default .select2-results > .select2-results__options {
  max-height: 300px;
}
.select2-container--default .select2-results > .select2-results__options::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 11px;
}
.select2-container--default .select2-results > .select2-results__options::-webkit-scrollbar-thumb {
    border-radius: 7px;
    border: 2px solid white;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.select2-container .select2-selection .select2-selection__arrow {
  height: 100%;
  position: absolute;
  top: 1px;
  right: 1px;
  width: 20px;
  cursor: pointer;
}
.select2-container .select2-selection .select2-selection__arrow b {
  border-color: #888 transparent transparent transparent;
  border-style: solid;
  border-width: 5px 4px 0 4px;
  height: 0;
  left: 50%;
  margin-left: -4px;
  margin-top: -2px;
  position: absolute;
  top: 50%;
  width: 0;
}

.select2-container .select2-results__option .select2-results__option::before {
  display: inline-block;
  width: 1.3em;
  content: ' ';
}

.select2-container .select2-results__option[aria-selected=true]::before {
  content: '\2713 ';
}

/**** .d3-tip customizations ****/

.d3-tip { z-index: 1000; }

.d3-tip .dist-value { font-size: 120%; }

.link-info {
  border-bottom: 1px solid white;
  border-collapse: collapse;
  margin-bottom: 0.5em;
}

.link-info th, .link-info td {
  padding: 0.3em 0.5em;
}

.link-info th {
  border-bottom: 1px solid white;
}
.link-info th.dist {
  text-align: center;
}

.link-info tr.merge td:not(:empty) {
  font-style: italic;
  background-color: #666;
}

.link-info td.same {
  text-align: center;
  font-weight: bold;
}

.link-info td.same::before {
  display: inline-block;
  height: 0.3em;
  width: 40px;
  content: ' ';
  margin-right: 0.5em;
  align: baseline;
  border-top: 1px solid #555;
}
.link-info td.same::after {
  display: inline-block;
  height: 0.3em;
  width: 40px;
  content: ' ';
  margin-left: 0.5em;
  align: baseline;
  border-top: 1px solid #555;
}

.d3-tip .label {
  text-align: right;
  opacity: 0.5;
}

.d3-tip a:link, .d3-tip a:visited {
  color: white;
  text-decoration: none;
}
.d3-tip.show-more a:link, .d3-tip.show-more a:visited {
  color: #9CD6F7;
}
.d3-tip a:hover, .d3-tip a:active {
  text-decoration: underline;
}

.d3-tip .more {
  text-align: center;
}
.d3-tip .more a:link {
  margin-left: 0.5em;
}
.more .instructions {
  font-style: italic;
}
.more .instructions, .show-more .more .links { display: inline; }
.show-more .more .instructions, .more .links { display: none; }

.d3-tip .merge-warn {
  text-align: center;
  font-size: 80%;
  color: #aaa;
  margin-bottom: 0.5em;
}

